# services/catalogs/write_service/docs/swagger.yaml
@@ -17,37 +17,28 @@ definitions:
   dtos.CreateProductRequestDto:
     properties:
       description:
-        maxLength: 5000
-        minLength: 0
         type: string
       name:
-        maxLength: 255
-        minLength: 0
         type: string
       price:
-        minimum: 0
         type: number
-    required:
-    - description
-    - name
-    - price
     type: object
   dtos.CreateProductResponseDto:
     properties:
       productId:
         type: string
     type: object
-  getting_product_by_id.GetProductByIdResponseDto:
+  dtos.GetProductByIdResponseDto:
     properties:
       product:
         $ref: '#/definitions/dto.ProductDto'
     type: object
-  getting_products.GetProductsResponseDto:
+  dtos.GetProductsResponseDto:
     properties:
       products:
         type: object
     type: object
-  searching_product.SearchProductsResponseDto:
+  dtos.SearchProductsResponseDto:
     properties:
       products:
         type: object
@@ -55,20 +46,11 @@ definitions:
   updating_product.UpdateProductRequestDto:
     properties:
       description:
-        maxLength: 5000
-        minLength: 0
         type: string
       name:
-        maxLength: 255
-        minLength: 0
         type: string
       price:
-        minimum: 0
         type: number
-    required:
-    - description
-    - name
-    - price
     type: object
   utils.FilterModel:
     properties:
@@ -84,7 +66,7 @@ info:
     name: Mehdi Hadeli
     url: https://github.com/mehdihadeli
 paths:
-  /products:
+  /api/v1/products:
     get:
       consumes:
       - application/json
@@ -105,7 +87,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/getting_products.GetProductsResponseDto'
+            $ref: '#/definitions/dtos.GetProductsResponseDto'
       summary: Get all product
       tags:
       - Products
@@ -130,7 +112,7 @@ paths:
       summary: Create product
       tags:
       - Products
-  /products/{id}:
+  /api/v1/products/{id}:
     delete:
       consumes:
       - application/json
@@ -165,7 +147,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/getting_product_by_id.GetProductByIdResponseDto'
+            $ref: '#/definitions/dtos.GetProductByIdResponseDto'
       summary: Get product
       tags:
       - Products
@@ -193,7 +175,7 @@ paths:
       summary: Update product
       tags:
       - Products
-  /products/search:
+  /api/v1/products/search:
     get:
       consumes:
       - application/json
@@ -207,7 +189,6 @@ paths:
         type: integer
       - in: query
         name: search
-        required: true
         type: string
       - in: query
         name: size
@@ -218,7 +199,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/searching_product.SearchProductsResponseDto'
+            $ref: '#/definitions/dtos.SearchProductsResponseDto'
       summary: Search products
       tags:
       - Products
