# services/catalogs/write_service/internal/products/features/getting_product_by_id/get_product_by_id_handler.go
@@ -7,6 +7,7 @@ import (
 	"github.com/mehdihadeli/store-golang-microservice-sample/pkg/logger"
 	"github.com/mehdihadeli/store-golang-microservice-sample/services/catalogs/write_service/config"
 	"github.com/mehdihadeli/store-golang-microservice-sample/services/catalogs/write_service/internal/products/contracts"
+	"github.com/mehdihadeli/store-golang-microservice-sample/services/catalogs/write_service/internal/products/features/getting_product_by_id/dtos"
 	"github.com/mehdihadeli/store-golang-microservice-sample/services/catalogs/write_service/internal/products/mappers"
 	"github.com/mehdihadeli/store-golang-microservice-sample/services/catalogs/write_service/internal/products/models"
 )
@@ -25,7 +26,7 @@ func NewGetProductByIdHandler(log logger.Logger, cfg *config.Config, pgRepo cont
 	return &GetProductByIdHandler{log: log, cfg: cfg, pgRepo: pgRepo}
 }
 
-func (q *GetProductByIdHandler) Handle(ctx context.Context, query GetProductById) (*GetProductByIdResponseDto, error) {
+func (q *GetProductByIdHandler) Handle(ctx context.Context, query GetProductById) (*dtos.GetProductByIdResponseDto, error) {
 	product, err := q.pgRepo.GetProductById(ctx, query.ProductID)
 
 	if err != nil {
@@ -34,5 +35,5 @@ func (q *GetProductByIdHandler) Handle(ctx context.Context, query GetProductById
 
 	productDto := mappers.ProductToProductDto(product)
 
-	return &GetProductByIdResponseDto{Product: productDto}, nil
+	return &dtos.GetProductByIdResponseDto{Product: productDto}, nil
 }
